add meta description and use img tag for banner

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>makerblock</title>
-        <meta name="description" content="">
+        <title>MAKERS' BLOCK</title>
+        <meta name="description" content="Makers' Block | 27 June to 7 July 2014 | Suntec City Singapore | A Build, Craft and Design Experience">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -29,6 +29,7 @@
 
             <!-- image container for banner -->
             <div class="jumbotron" alt="Makers' Block">
+                <img src="./images/Banner_Transparent.png" alt="Makers' Block | 27 June to 7 July 2014 | Suntec City Singapore">
             </div>
 
             <div class="row marketing">
