add section header titles, remove border bottom for jumbotron

--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,28 @@
             </div>
 
             <div class="row marketing">
-                <section class="appship">
-                    <div class="col-lg-12"></div>
+                <section class="appship" alt="apprenticeships">
+                    <div class="col-lg-12">
+                        <h1>Apprenticeship</h1>
+                    </div>
                 <section>
 
-                <section class="sessions">
-                    
+                <section class="sessions" alt="talks">
+                    <div class="col-lg-12">
+                        <h1>Sessions</h1>
+                    </div>
                 </section>
 
-                <section class="mash-up">
+                <section class="mash-up" alt="">
+                    <div class="col-lg-12">
+                        <h1>Mash ups</h1>
+                    </div>
+                </section>
+
+                <section class="labs" alt="">
+                    <div class="col-lg-12">
+                        <h1>Labs</h1>
+                    </div>
                 </section>
             </div>
 
