push bootstrap column classes within sections

--- a/app/index.html
+++ b/app/index.html
@@ -33,26 +33,36 @@
             </div>
 
             <div class="row marketing">
-                <section class="appship" alt="apprenticeships">
-                    <div class="col-lg-12">
+                <section class="appship row" alt="apprenticeships">
+                    <div class="col-xs-8">
                         <h1>Apprenticeship</h1>
                     </div>
-                <section>
+                    <div class="col-xs-4">
+                        <h2>img</h2>
+                    </div>
+                </section>
 
-                <section class="sessions" alt="talks">
-                    <div class="col-lg-12">
+                <section class="sessions row" alt="talks">
+                    <div class="col-xs-4">
+                        <h2>img</h2>
+                    </div>
+
+                    <div class="col-xs-8">
                         <h1>Sessions</h1>
                     </div>
                 </section>
 
-                <section class="mash-up" alt="">
-                    <div class="col-lg-12">
+                <section class="mash-up row" alt="">
+                    <div class="col-xs-8">
                         <h1>Mash ups</h1>
+                    </div>
+                    <div class="col-xs-4">
+                        <h2> img</h2>
                     </div>
                 </section>
 
-                <section class="labs" alt="">
-                    <div class="col-lg-12">
+                <section class="labs row" alt="">
+                    <div class="col-xs-8">
                         <h1>Labs</h1>
                     </div>
                 </section>
