revert to full with rows

--- a/app/index.html
+++ b/app/index.html
@@ -34,37 +34,37 @@
 
             <div class="row marketing">
                 <section class="appship row" alt="apprenticeships">
-                    <div class="col-xs-8">
+                    <!-- <div class="col-xs-8"> -->
                         <h1>Apprenticeship</h1>
-                    </div>
-                    <div class="col-xs-4">
-                        <h2>img</h2>
-                    </div>
+                    <!-- </div> -->
+                    <!-- <div class="col-xs-4"> -->
+                        <!-- <h2>img</h2> -->
+                    <!-- </div> -->
                 </section>
 
                 <section class="sessions row" alt="talks">
-                    <div class="col-xs-4">
-                        <h2>img</h2>
-                    </div>
+                    <!-- <div class="col-xs-4"> -->
+                        <!-- <h2>img</h2> -->
+                    <!-- </div> -->
 
-                    <div class="col-xs-8">
+                    <!-- <div class="col-xs-8"> -->
                         <h1>Sessions</h1>
-                    </div>
+                    <!-- </div> -->
                 </section>
 
                 <section class="mash-up row" alt="">
-                    <div class="col-xs-8">
+                    <!-- <div class="col-xs-8"> -->
                         <h1>Mash ups</h1>
-                    </div>
-                    <div class="col-xs-4">
-                        <h2> img</h2>
-                    </div>
+                    <!-- </div> -->
+                    <!-- <div class="col-xs-4"> -->
+                        <!-- <h2> img</h2> -->
+                    <!-- </div> -->
                 </section>
 
                 <section class="labs row" alt="">
-                    <div class="col-xs-8">
+                    <!-- <div class="col-xs-8"> -->
                         <h1>Labs</h1>
-                    </div>
+                    <!-- </div> -->
                 </section>
             </div>
 
