add content copy for landing page

--- a/app/index.html
+++ b/app/index.html
@@ -34,38 +34,37 @@
 
             <div class="row marketing">
                 <section class="appship row" alt="apprenticeships">
-                    <!-- <div class="col-xs-8"> -->
+                    <div class="col-xs-12">
                         <h1>Apprenticeship</h1>
-                    <!-- </div> -->
-                    <!-- <div class="col-xs-4"> -->
-                        <!-- <h2>img</h2> -->
-                    <!-- </div> -->
+                        <p>Get you hards dirty by attending multiple disciplinary workshops aimed at all skill levels, from kids to curious adults.</p>
+                        <p>Topics include, building your own cardboard robot, introduction to Electronics, 3D printing as well as many other cool activities for all the family.</p>
+                    </div>
                 </section>
 
                 <section class="sessions row" alt="talks">
-                    <!-- <div class="col-xs-4"> -->
-                        <!-- <h2>img</h2> -->
-                    <!-- </div> -->
-
-                    <!-- <div class="col-xs-8"> -->
+                    <div class="col-xs-12">
                         <h1>Sessions</h1>
-                    <!-- </div> -->
-                </section>
-
-                <section class="mash-up row" alt="">
-                    <!-- <div class="col-xs-8"> -->
-                        <h1>Mash ups</h1>
-                    <!-- </div> -->
-                    <!-- <div class="col-xs-4"> -->
-                        <!-- <h2> img</h2> -->
-                    <!-- </div> -->
+                        <p>Featuring homegrown artists, designers, expert engineers and unique craftsmen, our fireside talks will feed your curiousity and spark your imagination to the fullest.</p>
+                    </div>
                 </section>
 
                 <section class="labs row" alt="">
-                    <!-- <div class="col-xs-8"> -->
+                    <div class="col-xs-12">
                         <h1>Labs</h1>
-                    <!-- </div> -->
+                        <p>Want to make something cool? Bring your ideas to Makers' Block for guidance on incorporating the latest cutting edge techniques for your project from our panel of experts.</p>
+                        <p>Creating stuff is a fun shared activity, so let's make things together.</p>
+                    </div>
                 </section>
+
+                <section class="mash-up row" alt="">
+                    <div class="col-xs-12">
+                        <h1>Mash ups</h1>
+                        <p>By combining multiple creative disciplines, we have gathered the best artists, makers and designers to feature unique collaborative projects to showcase their artistic flair for live performance and interactive installations.</p>
+                        <p>You will be overloaded with awesomeness. Be ready.</p>
+                    </div>
+                </section>
+
+
             </div>
 
             <div class="footer">
