use 2x banner image, add footer content

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
             <!-- image container for banner -->
             <div class="jumbotron" alt="Makers' Block">
-                <img src="./images/Banner_Transparent.png" alt="Makers' Block | 27 June to 7 July 2014 | Suntec City Singapore">
+                <img src="./images/Banner_Transparent_2x.png" alt="Makers' Block | 27 June to 7 July 2014 | Suntec City Singapore">
             </div>
 
             <div class="row marketing">
@@ -68,7 +68,8 @@
             </div>
 
             <div class="footer">
-                <p></p>
+                <p>2014 &copy MAKERS' BLOCK <p>
+                <p>27 JUN - 4 JUL | SUNTEC CITY</p>
             </div>
         </div>
 
